charts/atlas/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlas
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - atlas.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: atlas-backend
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: atlas-backend
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: atlas-frontend
          port: 3000
